# HypercubeCNN

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HCNN.cpp  HCNN.h  HCNNConv.cpp  HCNNConv.h  HCNNNetwork.cpp  HCNNNetwork.h  HCNNPool.cpp  HCNNPool.h  HCNNProfile.cpp  HCNNProfile.h  HCNNReadout.cpp  HCNNReadout.h  README.md  ThreadPool.h  how_to_build.md  main.cpp  molnet_train.cpp  placeholder.cpp  speck32.h  speck_train.cpp
.github/workflows/: ci.yml
cmake/: HypercubeCNNConfig.cmake.in
dataloader/: HCNNDataset.cpp  HCNNDataset.h  HCNNMNISTDataset.cpp  HCNNMNISTDataset.h  MoleculeNetDataset.cpp  MoleculeNetDataset.h
diagnostics/: gradient_check.cpp  layer_isolation.cpp  shell_mask_comparison.cpp
docs/: CPP_SDK.md  application-space.md  architecture.md  architecture_for_dummies.md  boolean_functions.md  concept.md  mnist.md  molecular_fingerprints.md  molnet-baselines.md  native_hypercube_data_plan.md  original_work.md  publication_readiness.md  whatif.md
examples/: fashion_mnist_train.cpp  mnist_train.cpp  mnist_train.md  regression_timeseries.cpp  regression_timeseries.md
experiments/boolean/: BooleanData.h  boolean_experiment.cpp
scripts/: featurize_bbbp.py  featurize_molnet.py
tests/: CoreSmokeTest.cpp
